/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/systems/hub/distributor/pb/gen";
 
 package ukama.hub.distributor.v1;
 
 import "validator.proto";
 
 service ChunkerService {
     rpc CreateChunk(CreateChunkRequest) returns (CreateChunkResponse);
 }
 
 
 message CreateChunkRequest {
     string Name = 1 [(validator.field) = {string_not_empty: true}, json_name = "name"];
     string Type =2 [(validator.field) = {string_not_empty: true}, json_name = "type"];
     string Version = 3 [json_name = "version"];
     string Store= 4 [json_name = "location"];
 }
 
 message CreateChunkResponse {
    bytes index =1;
    int64 size= 2;  
 }
